welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: type nt
  var T: nt = nums.length
         ^